# rrobjects

./: .gitignore  ASSESSMENT.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  capability.yml  config.yml  measurement.yml
.github/workflows/: ci.yml
baselines/: container-estate.json  container-mem.json
crates/classifier/: Cargo.toml
crates/classifier/src/: constrained.rs  lib.rs
crates/classifier/tests/: live_brain.rs
crates/connectors/: Cargo.toml
crates/connectors/src/: fs.rs  jsonl.rs  lib.rs
crates/connectors/tests/: sync.rs
crates/connxism/: Cargo.toml
crates/connxism/src/: catalog.rs  estate.rs  filter.rs  index.rs  keys.rs  lib.rs  model.rs  query.rs  store.rs
crates/connxism/src/kv/: fjall.rs
crates/connxism/tests/: analyzer.rs  compaction.rs  filter_aware_hnsw.rs  filters.rs  fjall_spike.rs  fusion_weights.rs  geo.rs  graph_persist.rs  namespaces.rs  payload_ops.rs  prefetch.rs  quantized.rs  query.rs  schemafull.rs
crates/embedder/: Cargo.toml
crates/embedder/src/: lib.rs
crates/embedder/src/training/: data.rs  mod.rs
crates/model-registry/src/: lib.rs
crates/recall/: Cargo.toml
crates/recall/examples/: annprobe.rs
crates/recall/src/: ann.rs  lib.rs  quant.rs
crates/recall/tests/: mmap.rs  paged.rs  real_vector_ef.rs
crates/reranker/src/: identity.rs  lib.rs
crates/reranker/tests/: rerank_lift.rs
crates/rrd/: Cargo.toml
crates/rrd/tests/: gate_ladder.rs
crates/rrf-client/: Cargo.toml
crates/rrf-client/src/: lib.rs
crates/rrf-client/tests/: client.rs
crates/rrf-core/src/: events.rs  geo.rs  lib.rs  query.rs  text.rs
crates/rrf-flow/src/: handler.rs  ingest.rs  serve.rs
crates/rrf-flow/tests/: wire_surface.rs
crates/rro-client/src/: lib.rs
crates/rro-core/src/: lib.rs  query.rs  semconv.rs  turn.rs  types.rs
crates/rro-engine/: Cargo.toml
crates/rro-engine/src/: cluster.rs  flow.rs  graphql.rs  handler.rs  http.rs  lib.rs  replica.rs  serve.rs  sql.rs
crates/rro-engine/tests/: estate_is_yours.rs  failover.rs  full_turn.rs  graphql_wire.rs  http_doorway.rs  ops.rs  quorum_ack.rs  replication.rs  watch.rs  wire_surface.rs
crates/rro-ql/: Cargo.toml
crates/rro-ql/src/: ast.rs  error.rs  lexer.rs  lib.rs  lower.rs  parser.rs
crates/rro-ql/tests/: roundtrip.proptest-regressions  roundtrip.rs
deploy/: Containerfile  rro-embed-vllm.container  rro.container
docs/: ARCHITECTURE.md  BENCHMARKS.md  BENCHMARKS_REAL.md  COMPARISON.md  EXECUTION.md  FJALL_MIGRATION_PLAN.md  MODELS.md  MODEL_CHOICES.md  OBSERVABILITY.md  PARITY.md  PLAN.md  ROADMAP.md  ROADMAP_REAL.md
docs/adr/: 0003-rro-ql.md
integrations/claude-code/: README.md  rro-recall.py  rro.service
scripts/: gates.sh  mesh.sh  quickstart.sh
