[workspace]
resolver = "2"
members = [
    "crates/rrf-core",
    "crates/embedder",
    "crates/recall",
    "crates/reranker",
    "crates/classifier",
    "crates/connectome",
    "crates/connectors",
    "crates/connxism",
    "crates/rrd",
    "crates/rrf-net",
    "crates/rrf-client",
    "crates/rrf-flow",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.90"
license = "LicenseRef-ReasonReady-Proprietary"
authors = ["EonsofStupid <jessay@gmail.com>"]
repository = "https://github.com/eonsofstupid/rrf"
homepage = "https://github.com/eonsofstupid/rrf"
publish = false

[workspace.dependencies]
# Internal crates
rrf-core = { path = "crates/rrf-core" }
embedder = { path = "crates/embedder" }
recall = { path = "crates/recall" }
reranker = { path = "crates/reranker" }
classifier = { path = "crates/classifier" }
connectome = { path = "crates/connectome" }
connectors = { path = "crates/connectors" }
connxism = { path = "crates/connxism" }
rrd = { path = "crates/rrd" }
rrf-net = { path = "crates/rrf-net" }
rrf-client = { path = "crates/rrf-client" }
rrf-flow = { path = "crates/rrf-flow" }

# External
tokio = { version = "1", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }

rocksdb = { version = "0.24", default-features = false, features = ["bindgen-runtime", "lz4"] }

# Dev / test / bench
proptest = "1"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
