[workspace]
resolver = "2"
members = [
    "crates/rro-core",
    "crates/embedder",
    "crates/model-registry",
    "crates/recall",
    "crates/reranker",
    "crates/classifier",
    "crates/connectome",
    "crates/connectors",
    "crates/connxism",
    "crates/rrd",
    "crates/rro-net",
    "crates/rro-ql",
    "crates/rro-client",
    "crates/rro-engine",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.90"
license = "LicenseRef-ReasonReady-Proprietary"
authors = ["EonsofStupid <jessay@gmail.com>"]
repository = "https://github.com/eonsofstupid/rrobjects"
homepage = "https://github.com/eonsofstupid/rrobjects"
publish = false

[workspace.dependencies]
# Internal crates
rro-core = { path = "crates/rro-core" }
embedder = { path = "crates/embedder" }
model-registry = { path = "crates/model-registry" }
recall = { path = "crates/recall" }
reranker = { path = "crates/reranker" }
classifier = { path = "crates/classifier" }
connectome = { path = "crates/connectome" }
connectors = { path = "crates/connectors" }
connxism = { path = "crates/connxism" }
rrd = { path = "crates/rrd" }
rro-net = { path = "crates/rro-net" }
rro-ql = { path = "crates/rro-ql" }
rro-client = { path = "crates/rro-client" }
rro-engine = { path = "crates/rro-engine" }

# External
tokio = { version = "1", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }

rocksdb = { version = "0.24", default-features = false, features = ["bindgen-runtime", "lz4"] }
memmap2 = "0.9"
bytemuck = "1"

# Dev / test / bench
proptest = "1"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
