[package]
name = "classifier"
description = "Reason Ready — the Reason Ready daemon. Judges whether context is sufficient to reason on."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
serde_json = { workspace = true }
rro-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt", "sync", "time"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
