[package]
name = "connectors"
description = "Reason Ready — connector drivers and the sync engine. Operators share sources; the estate ingests them, resumably."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
rrf-core = { workspace = true }
connxism = { workspace = true }
rrd = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = { workspace = true }
embedder = { workspace = true }
