[package]
name = "connxism"
description = "Reason Ready — the kvs-connectome. RocksDB estate management: nodes, connectors, warp points, and the persistent hybrid (vector + BM25) recall spine."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[features]
# Fjall migration scaffolding. `kvs-fjall` pulls in the Fjall 3.x backend (pure-
# Rust LSM) alongside the shipping RocksDB one, so the feasibility spike and the
# coming parity/differential tests can run against it without disturbing the
# default build. RocksDB stays the default engine until the port's gates pass.
kvs-fjall = ["dep:fjall"]

[dependencies]
rro-core = { workspace = true }
recall = { workspace = true }
rocksdb = { workspace = true }
fjall = { version = "3.1.7", optional = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "macros"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = { workspace = true }
proptest = { workspace = true }
embedder = { workspace = true }
