[package]
name = "rrd"
description = "Reason Ready — the reason-ready object JIT. Shape-lattice modes and slivers, semantic-router tagging, per-shape compiled plans, RROs."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
rro-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
embedder = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
proptest = { workspace = true }
