[package]
name = "rrf-client"
description = "Reason Ready — the typed client. Treat any rrf node as local over the a2a layer-2 protocol."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "rrf-mcp"
path = "src/bin/rrf-mcp.rs"

[dependencies]
rrf-core = { workspace = true }
rrf-net = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-std", "io-util"] }

[dev-dependencies]
rrf-flow = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
